--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Dongle' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="island/island.css">
+</head>
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>무인도 게임 공략</h1>
+
+<a href="island/basic.html">무인도 게임 공략으로 가기</a>
+
+<h3 class="island">
+    게임을 시작하면 마을에 있다. 무인도 게임을 진행하려면 바다로 수영을 하러 가야한다. <br />
+    그럼 폭풍우가 온다. 그럼 무인도 오며 게임을 진행을 하라. <br />
+    공략을 보고싶으면 "무인도 게임 공략"을 눌러라.
+</h3>
 
 </body>
 </html>
